# DZ_WEB_9

./: autors.json  connect.py  main.py  models.py  pyproject.toml  seeds.py
seeds/: scrapy.cfg
seeds/seeds/: items.py  middlewares.py  pipelines.py  settings.py
seeds/seeds/spiders/: get_links.py
